--- a/assets/style.scss
+++ b/assets/style.scss
@@ -89,37 +89,52 @@ body {
   text-align: center;
 }
 
+h1 {
+  padding: 10px;
+  margin: 20px;
+}
+
+.scorePart {
+  margin: 40px;
+  font-weight: bold;
+}
+
 // GRID
 
 .container {
   display: grid;
-  grid-template-columns: 30% 70%;
-  grid-template-rows: 33% 33% 33%;
+  margin: 50px;
 }
 
 .start {
   grid-column: 1/2;
-  grid-row: 1/3;
+  grid-row: 1/2;
 }
 
 .points {
-  grid-column: 1/2;
+  grid-column: 1/3;
   grid-row: 3/4;
 }
 
 .auto-click {
   grid-column: 2/3;
-  grid-row: 1/2;
+  grid-row: 2/3;
 }
 
 .multi {
-  grid-column: 2/3;
+  grid-column: 1/2;
   grid-row: 2/3;
 }
 
 .boost {
   grid-column: 2/3;
-  grid-row: 3/4;
+  grid-row: 1/2;
+}
+
+// IMAGES / BUTTONS
+img {
+  border-radius: 30px;
+  margin: 10px;
 }
 
 // BACKGROUND
