--- a/assets/style.scss
+++ b/assets/style.scss
@@ -198,3 +198,15 @@ body {
     font-style: normal;
   }
 }
+.flexscore{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 15%;
+}
+.padding{
+  padding-top: 15%;
+}
+.achievementPart{
+  padding-right:  10%;
+}
