--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,8 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -22,44 +23,67 @@ a {
           user-select: none;
   color: black;
   font-size: 0;
-  transform: translate3d(0, 0, 0);
-  filter: blur(0);
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  -webkit-filter: blur(0);
+          filter: blur(0);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
 }
+
 a span {
   font-size: 40px;
   margin: 0;
   padding: 0;
   display: inline-block;
   position: relative;
+  -webkit-transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
+  transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
   transition: transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
+  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 250ms, -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
   padding: 0 0.1em;
 }
+
 a span:nth-child(0n) {
-  transition-delay: 0ms;
+  -webkit-transition-delay: 0ms;
+          transition-delay: 0ms;
 }
+
 a span:nth-child(0n):after {
-  transition-delay: 0ms;
+  -webkit-transition-delay: 0ms;
+          transition-delay: 0ms;
 }
+
 a span:nth-child(1n) {
-  transition-delay: 83.3333333333ms;
+  -webkit-transition-delay: 83.33333ms;
+          transition-delay: 83.33333ms;
 }
+
 a span:nth-child(1n):after {
-  transition-delay: 83.3333333333ms;
+  -webkit-transition-delay: 83.33333ms;
+          transition-delay: 83.33333ms;
 }
+
 a span:nth-child(2n) {
-  transition-delay: 166.6666666667ms;
+  -webkit-transition-delay: 166.66667ms;
+          transition-delay: 166.66667ms;
 }
+
 a span:nth-child(2n):after {
-  transition-delay: 166.6666666667ms;
+  -webkit-transition-delay: 166.66667ms;
+          transition-delay: 166.66667ms;
 }
+
 a span:nth-child(3n) {
-  transition-delay: 250ms;
+  -webkit-transition-delay: 250ms;
+          transition-delay: 250ms;
 }
+
 a span:nth-child(3n):after {
-  transition-delay: 250ms;
+  -webkit-transition-delay: 250ms;
+          transition-delay: 250ms;
 }
+
 a span:after {
   content: "";
   position: absolute;
@@ -68,61 +92,109 @@ a span:after {
   width: 102%;
   height: 2em;
   background: black;
-  transform-origin: top center;
-  transform: scaley(0.1);
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
+  -webkit-transform: scaley(0.1);
+          transform: scaley(0.1);
+  -webkit-transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
+  transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
   transition: transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
+  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 250ms, -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 250ms;
 }
+
 a:hover span {
-  transform: translateY(-1em);
+  -webkit-transform: translateY(-1em);
+          transform: translateY(-1em);
 }
+
 a:hover span:after {
-  transform: scaleY(1);
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
 }
+
 a:active span {
-  transform: translateY(0);
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
+  transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
   transition: transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
-  transition-delay: 0 !important;
+  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 125ms, -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
+  -webkit-transition-delay: 0 !important;
+          transition-delay: 0 !important;
 }
+
 a:active span:after {
-  transform: scaleY(0.5);
+  -webkit-transform: scaleY(0.5);
+          transform: scaleY(0.5);
+  -webkit-transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
+  transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
   transition: transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
-  transition-delay: 0 !important;
+  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 125ms, -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 125ms;
+  -webkit-transition-delay: 0 !important;
+          transition-delay: 0 !important;
 }
 
 body {
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
 }
 
 .container {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 30% 70%;
-  grid-template-rows: 33% 33% 33%;
+  -ms-grid-columns: 30% 70%;
+      grid-template-columns: 30% 70%;
+  -ms-grid-rows: 33% 33% 33%;
+      grid-template-rows: 33% 33% 33%;
 }
 
 .start {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1/3;
 }
 
 .points {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1/2;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
   grid-row: 3/4;
 }
 
 .auto-click {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
   grid-row: 1/2;
 }
 
 .multi {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
   grid-row: 2/3;
 }
 
 .boost {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2/3;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
   grid-row: 3/4;
 }
 
@@ -131,21 +203,25 @@ body {
     background-position: 50px 50px;
   }
 }
+
 @keyframes bg-scrolling-reverse {
   100% {
     background-position: 50px 50px;
   }
 }
+
 @-webkit-keyframes bg-scrolling {
   0% {
     background-position: 50px 50px;
   }
 }
+
 @keyframes bg-scrolling {
   0% {
     background-position: 50px 50px;
   }
 }
+
 body {
   margin-top: 13.5rem;
   color: #999;
@@ -161,8 +237,31 @@ body {
   -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
 }
+
 body::before {
   font-size: 8rem;
   font-weight: 100;
   font-style: normal;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.flexscore {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 15%;
+}
+
+.padding {
+  padding-top: 15%;
+}
+
+.achievementPart {
+  padding-right: 10%;
+}
+/*# sourceMappingURL=style.css.map */
